--- a/source/_posts/2013-10-29-empathy.markdown
+++ b/source/_posts/2013-10-29-empathy.markdown
@@ -17,7 +17,7 @@ If  a great product is the number one thing that will make you successful, the a
 
 Empathy is a great term to describe what I mean. According to Google, empathy is *the ability to understand and share the feelings of another*. As we grow up, we develop a worldview, our sense of right and wrong, our established ways of doing things and it gets harder and harder to see different perspectives. We are also never taught this skill in any formal way. We are taught writing so we can communicate our ideas better. We are taught maths and science so we can operate in the real world but we never take classes in figuring out people or figuring out what drives them. Atleast not in the Engineering world that I came from. I may go as far as saying that even understanding our own drivers is actually a pretty significant leap.
 
-Let me illustrate with a few personal examples. I once worked for a startup a year or so out of college and as much as I wanted to contribute to the company, I could never make a meaningful impact. I have also been in situations where I not been able to help a team member achieve their best. Having been on both sides of the table, I can see the pattern finally. The mistake is not spending enough time understanding individuals and figuring out what drives them and then helping them define a role that helps them achieve their potential and also contribute to the the business.  A few weeks ago, I read [Merissa Mayer's](http://www.businessinsider.com/marissa-mayer-biography-2013-8?op=1) biography and [Avinasha](https://avinasha.com) and I talked about how this line caught our attention. 
+Let me illustrate with a few personal examples. I once worked for a startup a year or so out of college and as much as I wanted to contribute to the company, I could never make a meaningful impact. I have also been in situations where I not been able to help a team member achieve their best. Having been on both sides of the table, I can see the pattern finally. The mistake is not spending enough time understanding individuals and figuring out what drives them and then helping them define a role that helps them achieve their potential and also contribute to the the business.  A few weeks ago, I read [Marissa Mayer's](http://www.businessinsider.com/marissa-mayer-biography-2013-8?op=1) biography and [Avinasha](https://avinasha.com) and I talked about how this line caught our attention. 
 
 "She’d already countered Apple’s offers by giving her people what they really wanted. Sometimes it was raises. Sometimes it was independence. Sometimes it was new titles. Sometimes it was actually more work, more responsibility. She knew what her people wanted. None of her reports ended up quitting to join Apple. 
 
