--- a/source/_posts/2013-10-29-empathy.markdown
+++ b/source/_posts/2013-10-29-empathy.markdown
@@ -23,7 +23,7 @@ Let me illustrate with a few personal examples. I once worked for a startup a ye
 
 Read more: http://www.businessinsider.com/marissa-mayer-biography-2013-8#ixzz2jAPoNqGQ"
 
-Even if Merissa's personal driver was making an oustanding app and keeping Apple at bay, she did not expect everyone to be motivated only by that goal.
+Even if Marissa's personal driver was making an oustanding app and keeping Apple at bay, she did not expect everyone to be motivated only by that goal.
 
 I do want to mention that understanding people is not the same thing as understanding them enough to be able to get what you want out of them. It's not just about pep talking them into working longer hours or throwing more money their way to keep them in the company. I am specifically talking about creating situations where people can give their best and find happiness in what they do. Sometimes it also means finding a new place to work because what they want cannot be achieved in your company. 
 
