--- a/source/_posts/2013-10-29-empathy.markdown
+++ b/source/_posts/2013-10-29-empathy.markdown
@@ -27,6 +27,6 @@ Even if Marissa's personal driver was making an oustanding app and keeping Apple
 
 I do want to mention that understanding people is not the same thing as understanding them enough to be able to get what you want out of them. It's not just about pep talking them into working longer hours or throwing more money their way to keep them in the company. I am specifically talking about creating situations where people can give their best and find happiness in what they do. Sometimes it also means finding a new place to work because what they want cannot be achieved in your company. 
 
-The same goes for  customer interactions too. I would argue that the best UX designers are people who can empathize with their users. They can keep their personal biases in check when designing for their users. At SupportBee, we don't do many pre-sales calls but we do several customer calls a week to understand why people are facing a problem. I used to think of customer support as a way to help customers, win their loyalty and their social recomendation (and that holds) but not as a defining force in product development. Taking an interest in their business as a whole and not just their issues with SupportBee has helped me understand how to write better software for them. I lacked this perspective in Muziboo and I am not surprised that we failed to create the next big thing even after having a significant early traction (over half a million users a couple of years back).
+The same goes for  customer interactions too. I would argue that the best UX designers are people who can empathize with their users. They can keep their personal biases in check when designing for their users. At SupportBee, we don't do many pre-sales calls but we do several customer calls a week to understand why people are facing a problem. I used to think of customer support as a way to help customers, win their loyalty and their social recomendation (and that holds) but not as a defining force in product development. Taking an interest in their business as a whole and not just their issues with SupportBee has helped me understand how to write better software for them. I lacked this perspective in Muziboo and I am not surprised that we failed to create the next big thing even after having significant early traction (over half a million users a couple of years back).
 
 Apart from the experience of working on several products and working with some great people, traveling and living in new countries really helped me open up with people and question my assumptions about things. It also helped me enjoy these interactions and learn from them. Having grown up with a very engineering mindset, I lacked this perspective before and I know I have rubbed people in the wrong way in the past. If I interacted with you or someone you know and wasn't nice, I am sorry.
