--- a/source/_posts/2013-10-29-empathy.markdown
+++ b/source/_posts/2013-10-29-empathy.markdown
@@ -13,7 +13,7 @@ If I look back at the last six years of my startup life, I have made a lot of mi
 * Mistakes in defining the product's scope or direction. Not being able to resolve the conflict between what I want the product to do and what our customers want the product to do.
 * Mistakes in hiring and scaling the team
 
-If  a great product is the number one thing that will make you successful, the ability to understand and work with people is going to be the most important factor in building that product. Whether it's talking to customers or your co-founder or your team members or advisors, you are always working with other people. Understanding people if the first step in being able to work with them.
+If  a great product is the number one thing that will make you successful, the ability to understand and work with people is going to be the most important factor in building that product. Whether it's talking to customers or your co-founder or your team members or advisors, you are always working with other people. Understanding people is the first step in being able to work with them.
 
 Empathy is a great term to describe what I mean. According to Google, empathy is *the ability to understand and share the feelings of another*. As we grow up, we develop a worldview, our sense of right and wrong, our established ways of doing things and it gets harder and harder to see different perspectives. We are also never taught this skill in any formal way. We are taught writing so we can communicate our ideas better. We are taught maths and science so we can operate in the real world but we never take classes in figuring out people or figuring out what drives them. Atleast not in the Engineering world that I came from. I may go as far as saying that even understanding our own drivers is actually a pretty significant leap.
 
